<resources>
    <string name="app_name">Bitsa</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="contribution">Contribution</string>
    <string name="suggest">Suggest</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_notifications">No notifications</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="error_occured">Error occured</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="login_as">Login  as</string>
    <string name="student">student</string>
    <string name="club_official">Club official</string>
    <string name="unknown_error">Unkown error</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="projects">Projects</string>
    <string name="project_catalogue">Project catalogue</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="proceed">Proceed</string>
    <string name="school_id">School id</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="field_cannot_be_empty">Field cannot be empty</string>
    <string name="invalid_length">Invalid length</string>
    <string name="strong_password_prompt">Password should have length greater than 6 and should consist of numbers and letters</string>
    <string name="student_with_given_id_not_exist">Student with the given school id does not exist</string>
    <string name="ok">OK</string>
    <string name="error_sending_email">Error sending email</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="new_announcement">New announcement</string>
    <string name="send">Send</string>
    <string name="announcement_sent">Announcement sent</string>
    <string name="new_suggestion">New suggestion</string>
    <string name="suggestion_sent">Suggestion sent</string>
    <string name="no_suggestions">No suggestions, feel free to add suggestions.</string>
    <string name="bitsa">Bitsa</string>
    <string name="senior_year_projects">Senior year</string>
    <string name="students">Student</string>
    <string name="no_senior_year_projects">No senior year projects added</string>
    <string name="no_bitsa_projects_added">No bitsa projects</string>
    <string name="no_student_projects">No student projects</string>
    <string name="description">Description</string>
    <string name="url">URL</string>
    <string name="status">Status</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="failure_reason">Reason for project failure</string>
    <string name="update_project">Update project</string>
    <string name="add_project">Add project</string>
    <string name="project_members">Project members</string>
    <string name="phone_number">Phone number</string>
    <string name="remove">Remove</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="member_with_given_name_exists">Member with the given name already exists</string>
    <string name="member_with_given_number_exists">Member with the given phone number already exists</string>
    <string name="member_with_given_email_exists">Member with the given email address exists</string>
    <string name="member_role">Role</string>
    <string name="invalid_url">Invalid url</string>
    <string name="failure_reason_wrong_length">Failure reason should be greater than 10</string>
    <string name="visit_web_page">Visit web page</string>
    <string name="update">Update</string>
    <string name="status_with_semilcolon">Status:</string>
    <string name="view_project_members">View project members</string>
    <string name="no_web_page">No webpage</string>
    <string name="complete">Complete</string>
    <string name="failed">Failed</string>
    <string name="ongoing">Ongoing</string>
    <string name="no_project_members">No project members</string>
    <string name="call">Call</string>
    <string name="no_email_set">No email set</string>
    <string name="no_phone_number_set">No phone number set</string>
    <string name="email_send_failed">Error sending email</string>
    <string name="phone_call_failed">Phone call failed</string>
    <string name="no_project_exists_with_the_given_id">No project exists with the given id</string>
    <string name="project_updated">Project updated</string>
    <string name="project_added">Project added</string>
    <string name="payment">Payment</string>
    <string name="transactions">Transactions</string>
    <string name="kenya_country_code">+254</string>
    <string name="kenya_phone_number">Kenya phone number</string>
    <string name="connection">Connection</string>
    <string name="no_connection_message">No internet connection. Please connect your phone to the internet to proceed</string>
    <string name="no_transactions">No transactions</string>
    <string name="idea">Idea</string>
    <string name="mpesa">Mpesa</string>
    <string name="visa">Visa</string>
    <string name="payment_option">Payment option</string>
    <string name="credit_card">Credit card</string>
    <string name="database_error">Database error</string>
    <string name="user_not_exist">User doesnt exist</string>
    <string name="visitor">Visitor</string>
    <string name="error">Error</string>
    <string name="contribute">Contribute</string>
    <string name="please_singout_and_singin">Please signout and signin</string>
    <string name="payment_type">Payment type</string>
    <string name="amount">Amount</string>
    <string name="club_payment">Club payment</string>
    <string name="fetching_user">Fetching user .... </string>
    <string name="your_phone_number">Your phone number</string>
    <string name="general">General</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="version">1642.1f</string>
    <string name="build_version">Version</string>
    <string name="contact_us">Contact us</string>
    <string name="settings">Settings</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="cancel">Cancel</string>
    <string name="enter">Enter</string>
    <string name="success">Success</string>
    <string name="notice">Notice</string>
    <string name="notice_update_phone">1) Use your mpesa phone number. Go to settings if you want to add/update your phone number</string>
    <string name="notice_update_sim"><![CDATA[2) Enable mpesa stk push in your sim card if not enabled. Dial *234# go to mpesa products> then sim card upgrade]]></string>
    <string name="contact_us_for_help">Contact us if you need help</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="select_transaction_type">Select transaction type</string>
    <string name="error_processing_mpesa_request">Error processing mpesa request</string>
    <string name="channel_name">Bitsa</string>
    <string name="channel_description">Bitsa notifications</string>
    <string name="invalid_amount">Invalid amount</string>
    <string name="invalid_amount_info">Please enter value greater than 0 and less that 70,000</string>
    <string name="manage">Manage</string>
    <string name="semester">Semester</string>
    <string name="club_officials">Club officials</string>
    <string name="start_year">Start year</string>
    <string name="end_year">End year</string>
    <string name="contacts">Contacts</string>
    <string name="fetching_contents">Fetching content ....</string>
    <string name="no_students">No students</string>
    <string name="student_plural">Students</string>
    <string name="role">Role</string>
    <string name="major">Student major</string>
    <string name="is_club_official">Is club official?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tap_to_select_role">Tap to select role</string>
    <string name="update_student_details">Update student details</string>
    <string name="add_student">Add student</string>
    <string name="fetching_student">Fetching student .....</string>
    <string name="loading">Loading...</string>
    <string name="student_with_id_exists">Student with the given ID already exists</string>
    <string name="successfully_added_student">Successfully added student</string>

    <string-array name="student_major">
        <item>Software Engineering</item>
        <item>Networking</item>
        <item>BBIT</item>
        <item>Diploma</item>
    </string-array>

    <string-array name="project_status">
        <item>Idea</item>
        <item>Ongoing</item>
        <item>Complete</item>
        <item>Failed</item>
    </string-array>
</resources>
