<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general">
        <Preference
            android:title="@string/phone_number"
            android:summary="Default phone number"
            android:key="billing_phone_number"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about" >
        <Preference
            android:title="@string/privacy_policy"
            android:key="privacy_policy"/>
        <Preference
            android:summary="@string/version"
            android:title="@string/build_version" />
        <Preference
            android:key="contact_us"
            android:title="@string/contact_us" />
    </PreferenceCategory>


</PreferenceScreen>