<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/view_project_members"
        android:orderInCategory="1"
        android:title="@string/view_project_members"
        app:showAsAction="always"/>
    <item
        android:id="@+id/visit_webpage"
        android:orderInCategory="2"
        android:title="@string/visit_web_page"
        app:showAsAction="always"/>
    <item
        android:id="@+id/share"
        android:orderInCategory="3"
        android:title="@string/share"
        app:showAsAction="always"/>
    <item
        android:id="@+id/update"
        android:orderInCategory="4"
        android:title="@string/update"
        app:showAsAction="always"/>
    <item
        android:id="@+id/delete"
        android:orderInCategory="5"
        android:title="@string/delete"
        app:showAsAction="always"/>
</menu>