<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewAnnouncementActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="9dp"
        android:indeterminate="true" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="17sp"
        android:visibility="gone"
        tools:text="Fetching user .." />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/container"
        tools:context=".NewAnnouncementActivity">

        <LinearLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:hint="@string/name"
                app:boxStrokeColor="@color/deep_blue"
                app:boxStrokeWidth="2dp"
                app:layout_constraintTop_toBottomOf="@+id/welcome_back_password_body">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:hint="@string/school_id"
                app:boxStrokeColor="@color/deep_blue"
                app:boxStrokeWidth="2dp"
                app:layout_constraintTop_toBottomOf="@+id/welcome_back_password_body">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/school_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:hint="@string/email"
                app:boxStrokeColor="@color/deep_blue"
                app:boxStrokeWidth="2dp"
                app:layout_constraintTop_toBottomOf="@+id/welcome_back_password_body">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginRight="5dp"
                    android:textSize="17sp"
                    android:text="@string/kenya_country_code"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/kenya_phone_number"
                    app:boxStrokeColor="@color/deep_blue"
                    app:boxStrokeWidth="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/major" />

                <Spinner
                    android:id="@+id/major"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/student_major"/>

            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_margin="16dp"
                android:checkedButton="@+id/no"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/is_club_official"/>
                <RadioButton
                    android:id="@+id/yes"
                    android:layout_width="wrap_content"
                    android:text="@string/yes"
                    android:layout_height="wrap_content">
                </RadioButton>
                <RadioButton
                    android:id="@+id/no"
                    android:layout_width="wrap_content"
                    android:text="@string/no"
                    android:layout_height="wrap_content">
                </RadioButton>
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:id="@+id/role_container"
                android:layout_marginBottom="5dp"
                android:hint="@string/tap_to_select_role"
                app:boxStrokeColor="@color/deep_blue"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/role"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:text="@string/save"
                app:cornerRadius="10dp"
                app:rippleColor="@color/grey400"
                app:strokeColor="@color/deep_blue"
                app:strokeWidth="2dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>